Fix navigation image removing itself on small devices

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -71,6 +71,7 @@
 			flex-direction: row;
 			align-items: center;
 			justify-content: center;
+			flex: 0 0 auto;
 		}
 
 		#websiteName {
